[gd_scene load_steps=28 format=2]

[ext_resource path="res://Images/Tavern/Taverna_03.png" type="Texture" id=1]
[ext_resource path="res://Images/Assets_tavern/degrau_disable.png" type="Texture" id=2]
[ext_resource path="res://Images/Assets_tavern/degrau_enable.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Sheet_1.gd" type="Script" id=4]
[ext_resource path="res://Images/pauta.png" type="Texture" id=5]
[ext_resource path="res://Sound/Challenges/1_Rhythm/note_0.wav" type="AudioStream" id=6]
[ext_resource path="res://Sound/Challenges/1_Rhythm/note_1.wav" type="AudioStream" id=7]
[ext_resource path="res://Sound/Challenges/1_Rhythm/note_2.wav" type="AudioStream" id=8]
[ext_resource path="res://Sound/Challenges/1_Rhythm/note_3.wav" type="AudioStream" id=9]
[ext_resource path="res://Scripts/Global/bottles.gd" type="Script" id=10]
[ext_resource path="res://Images/Assets_tavern/cacosvideo-01.png" type="Texture" id=11]
[ext_resource path="res://Images/Assets_tavern/barril-01.png" type="Texture" id=12]
[ext_resource path="res://Scripts/Sheet_2.gd" type="Script" id=13]
[ext_resource path="res://Sound/Challenges/2_Melodic/note_0.wav" type="AudioStream" id=14]
[ext_resource path="res://Sound/Challenges/2_Melodic/note_1.wav" type="AudioStream" id=15]
[ext_resource path="res://Sound/Challenges/2_Melodic/note_2.wav" type="AudioStream" id=16]
[ext_resource path="res://Sound/Challenges/2_Melodic/note_3.wav" type="AudioStream" id=17]
[ext_resource path="res://Sound/Challenges/2_Melodic/note_4.wav" type="AudioStream" id=18]
[ext_resource path="res://Sound/Challenges/2_Melodic/note_5.wav" type="AudioStream" id=19]
[ext_resource path="res://Images/Assets_tavern/bar-01.png" type="Texture" id=20]
[ext_resource path="res://Scenes/Barman.tscn" type="PackedScene" id=21]
[ext_resource path="res://Scenes/Fight.tscn" type="PackedScene" id=22]

[sub_resource type="SpriteFrames" id=5]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "on",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 128.86, 9.85602 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 2337.2, 9.67148 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 294.871 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 203.449, 33.2238 )

[node name="third_floor" type="Node2D"]

[node name="background" type="Sprite" parent="." index="0"]

position = Vector2( 0, 1240 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 1 )
centered = false
_sections_unfolded = [ "Transform" ]

[node name="stairs" type="Node" parent="." index="1"]

editor/display_folded = true

[node name="stair_0" type="StaticBody2D" parent="stairs" index="0"]

editor/display_folded = true
position = Vector2( 400, 1560 )
scale = Vector2( -1, 1 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision", "Transform" ]

[node name="sprite" type="AnimatedSprite" parent="stairs/stair_0" index="0"]

scale = Vector2( 0.535166, 0.535166 )
frames = SubResource( 5 )
animation = "off"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionPolygon2D" parent="stairs/stair_0" index="1"]

visible = false
build_mode = 0
polygon = PoolVector2Array( -32.9622, 12.0261, 33.8388, 12.0261, 33.8388, 0.137802, 45.161, 0.137802, 45.0888, -11.1878, -44.472, -11.0483, -44.193, 0.530405, -32.8933, 0.530405 )
__meta__ = {
"_edit_lock_": true
}

[node name="stair_1" type="StaticBody2D" parent="stairs" index="1"]

editor/display_folded = true
position = Vector2( 520, 1630 )
scale = Vector2( -1, 1 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]

[node name="sprite" type="AnimatedSprite" parent="stairs/stair_1" index="0"]

scale = Vector2( 0.535166, 0.535166 )
frames = SubResource( 5 )
animation = "off"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionPolygon2D" parent="stairs/stair_1" index="1"]

visible = false
build_mode = 0
polygon = PoolVector2Array( -32.9622, 12.0261, 33.8388, 12.0261, 33.8388, 0.137802, 45.161, 0.137802, 45.0888, -11.1878, -44.472, -11.0483, -44.193, 0.530405, -32.8933, 0.530405 )
__meta__ = {
"_edit_lock_": true
}

[node name="stair_2" type="StaticBody2D" parent="stairs" index="2"]

editor/display_folded = true
position = Vector2( 640, 1700 )
scale = Vector2( -1, 1 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]

[node name="sprite" type="AnimatedSprite" parent="stairs/stair_2" index="0"]

scale = Vector2( 0.535166, 0.535166 )
frames = SubResource( 5 )
animation = "off"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionPolygon2D" parent="stairs/stair_2" index="1"]

visible = false
build_mode = 0
polygon = PoolVector2Array( -32.9622, 12.0261, 33.8388, 12.0261, 33.8388, 0.137802, 45.161, 0.137802, 45.0888, -11.1878, -44.472, -11.0483, -44.193, 0.530405, -32.8933, 0.530405 )
__meta__ = {
"_edit_lock_": true
}

[node name="stair_3" type="StaticBody2D" parent="stairs" index="3"]

editor/display_folded = true
position = Vector2( 760, 1770 )
scale = Vector2( -1, 1 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]

[node name="sprite" type="AnimatedSprite" parent="stairs/stair_3" index="0"]

scale = Vector2( 0.535166, 0.535166 )
frames = SubResource( 5 )
animation = "off"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionPolygon2D" parent="stairs/stair_3" index="1"]

visible = false
build_mode = 0
polygon = PoolVector2Array( -32.9622, 12.0261, 33.8388, 12.0261, 33.8388, 0.137802, 45.161, 0.137802, 45.0888, -11.1878, -44.472, -11.0483, -44.193, 0.530405, -32.8933, 0.530405 )
__meta__ = {
"_edit_lock_": true
}

[node name="sheet_1" type="StaticBody2D" parent="." index="2"]

position = Vector2( 252.424, 1489.93 )
scale = Vector2( 0.333448, 0.333448 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 4 )

[node name="sprite" type="Sprite" parent="sheet_1" index="0"]

texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionPolygon2D" parent="sheet_1" index="1"]

build_mode = 0
polygon = PoolVector2Array( -54.5889, 41.9768, -54.5889, -69.4426, -45.7144, -69.4426, -45.2217, -80.2886, 54.8589, -80.7817, 55.8447, -70.9214, 64.2256, -71.4143, 65.7046, -62.0474, 74.5791, -61.0613, 75.0718, -40.355, 66.1978, -39.8621, 65.7046, -30.002, 54.3657, -29.509, 54.3657, 71.0642, 45.4912, 71.0642, 44.9985, 80.9243, -65.4346, 80.4314, -65.4346, 71.0642, -75.7881, 70.5713, -75.2949, 49.3718, -64.4487, 49.865, -64.9419, 40.9907 )
__meta__ = {
"_edit_lock_": true
}

[node name="notes_1" type="Node" parent="." index="3"]

editor/display_folded = true

[node name="note_0" type="AudioStreamPlayer" parent="notes_1" index="0"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="note_1" type="AudioStreamPlayer" parent="notes_1" index="1"]

stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="note_2" type="AudioStreamPlayer" parent="notes_1" index="2"]

stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="note_3" type="AudioStreamPlayer" parent="notes_1" index="3"]

stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="door_four" type="Position2D" parent="." index="4"]

position = Vector2( 151.315, 1437.92 )
scale = Vector2( 2.71454, 2.52404 )

[node name="first_step" type="Position2D" parent="." index="5"]

position = Vector2( 399.797, 1523.6 )
scale = Vector2( 0.55, 0.55 )

[node name="rhythm_timer" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="floor_and_walls" type="StaticBody2D" parent="." index="7"]

editor/display_folded = true
position = Vector2( 0, 1240.11 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="door_collision" type="CollisionShape2D" parent="floor_and_walls" index="0"]

position = Vector2( 161.504, 319.8 )
scale = Vector2( 1.06782, 1 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="bottom_collision" type="CollisionShape2D" parent="floor_and_walls" index="1"]

position = Vector2( 1104.3, 607.762 )
scale = Vector2( 0.470872, 1.21338 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="top_collision" type="CollisionShape2D" parent="floor_and_walls" index="2"]

position = Vector2( 1102.09, 12.1594 )
scale = Vector2( 0.470872, 1.21338 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="left_collision" type="CollisionShape2D" parent="floor_and_walls" index="3"]

position = Vector2( 10.4542, 318.853 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="right_collision" type="CollisionShape2D" parent="floor_and_walls" index="4"]

position = Vector2( 2186.67, 315.368 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="bottles" type="StaticBody2D" parent="." index="8"]

editor/display_folded = true
position = Vector2( 590.154, 1801 )
scale = Vector2( -1, 1 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 10 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="sprite_0" type="Sprite" parent="bottles" index="0"]

rotation = 3.14159
scale = Vector2( 0.542253, -0.542253 )
texture = ExtResource( 11 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="sprite_1" type="Sprite" parent="bottles" index="1"]

position = Vector2( 204.598, 0 )
rotation = 3.14159
scale = Vector2( 0.542253, -0.542253 )
texture = ExtResource( 11 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionShape2D" parent="bottles" index="2"]

position = Vector2( 102.299, -1.9864 )
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="barrils" type="StaticBody2D" parent="." index="9"]

editor/display_folded = true
position = Vector2( 296.84, 1769.54 )
scale = Vector2( -1, 1 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="sprite_0" type="Sprite" parent="barrils" index="0"]

position = Vector2( 134.459, -123.986 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 12 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="sprite_1" type="Sprite" parent="barrils" index="1"]

position = Vector2( 205.728, 1.46399 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 12 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="sprite_2" type="Sprite" parent="barrils" index="2"]

position = Vector2( 79.8555, 0 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 12 )
_sections_unfolded = [ "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionPolygon2D" parent="barrils" index="3"]

build_mode = 0
polygon = PoolVector2Array( 22.3934, 53.0994, 22.3934, -50.7462, 33.014, -50.7462, 33.014, -63.1368, 77.2664, -63.1368, 77.2664, -174.653, 88.4771, -174.063, 88.4771, -186.453, 181.112, -187.043, 181.112, -175.833, 192.323, -175.243, 192.323, -73.1674, 179.932, -72.5774, 179.932, -61.9568, 250.146, -61.9568, 251.326, -50.1561, 264.306, -50.1561, 264.306, 53.0994, 251.916, 52.5093, 251.916, 63.7198, 32.4241, 63.7198, 32.4241, 52.5093 )
__meta__ = {
"_edit_lock_": true
}

[node name="sheet_2" type="StaticBody2D" parent="." index="10"]

position = Vector2( 1580.67, 1775.5 )
scale = Vector2( 0.333448, 0.333448 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 13 )

[node name="sprite" type="Sprite" parent="sheet_2" index="0"]

texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionPolygon2D" parent="sheet_2" index="1"]

build_mode = 0
polygon = PoolVector2Array( -54.5889, 41.9768, -54.5889, -69.4426, -45.7144, -69.4426, -45.2217, -80.2886, 54.8589, -80.7817, 55.8447, -70.9214, 64.2256, -71.4143, 65.7046, -62.0474, 74.5791, -61.0613, 75.0718, -40.355, 66.1978, -39.8621, 65.7046, -30.002, 54.3657, -29.509, 54.3657, 71.0642, 45.4912, 71.0642, 44.9985, 80.9243, -65.4346, 80.4314, -65.4346, 71.0642, -75.7881, 70.5713, -75.2949, 49.3718, -64.4487, 49.865, -64.9419, 40.9907 )
__meta__ = {
"_edit_lock_": true
}

[node name="notes_2" type="Node" parent="." index="11"]

[node name="note_0" type="AudioStreamPlayer2D" parent="notes_2" index="0"]

position = Vector2( 1291.57, 1372.92 )
scale = Vector2( 0.333448, 0.333448 )
stream = ExtResource( 14 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="note_1" type="AudioStreamPlayer2D" parent="notes_2" index="1"]

position = Vector2( 1291.57, 1372.92 )
scale = Vector2( 0.333448, 0.333448 )
stream = ExtResource( 15 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="note_2" type="AudioStreamPlayer2D" parent="notes_2" index="2"]

position = Vector2( 1291.57, 1372.92 )
scale = Vector2( 0.333448, 0.333448 )
stream = ExtResource( 16 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="note_3" type="AudioStreamPlayer2D" parent="notes_2" index="3"]

position = Vector2( 1291.57, 1372.92 )
scale = Vector2( 0.333448, 0.333448 )
stream = ExtResource( 17 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="note_4" type="AudioStreamPlayer2D" parent="notes_2" index="4"]

position = Vector2( 1291.57, 1372.92 )
scale = Vector2( 0.333448, 0.333448 )
stream = ExtResource( 18 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="note_5" type="AudioStreamPlayer2D" parent="notes_2" index="5"]

position = Vector2( 1291.57, 1372.92 )
scale = Vector2( 0.333448, 0.333448 )
stream = ExtResource( 19 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="bar" type="StaticBody2D" parent="." index="12"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="sprite" type="Sprite" parent="bar" index="0"]

position = Vector2( 1228.63, 1658.82 )
scale = Vector2( 0.508454, 0.508455 )
texture = ExtResource( 20 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="bar" index="1"]

build_mode = 0
polygon = PoolVector2Array( 1011.46, 1717.7, 1017.46, 1687, 1006.42, 1687, 1006.42, 1664.93, 1026.28, 1664.93, 1026.28, 1518.21, 1017.46, 1517.11, 1016.35, 1500.56, 1005.32, 1495.05, 1005.32, 1484.01, 1451, 1484.01, 1449.9, 1495.05, 1441.07, 1496.15, 1441.07, 1516.01, 1430.04, 1516.01, 1430.04, 1663.83, 1451, 1663.83, 1451, 1684.79, 1437.76, 1687, 1435.38, 1718.57 )

[node name="barman" parent="." index="13" instance=ExtResource( 21 )]

position = Vector2( 1228.24, 1539.89 )
scale = Vector2( 0.147528, 0.147528 )
_sections_unfolded = [ "Transform", "collision" ]

[node name="fight" parent="." index="14" instance=ExtResource( 22 )]

position = Vector2( 1841.03, 1665.14 )
scale = Vector2( 0.200679, 0.200679 )
_sections_unfolded = [ "Transform" ]

[connection signal="timeout" from="rhythm_timer" to="sheet_1" method="_on_rhythm_timer_timeout"]


